# cloth-competition

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  environment-dev.yaml  environment.yaml  makefile  setup.cfg
.github/workflows/: mypy.yaml  pre-commit.yaml  publish-to-pypi.yaml  pytest.yaml
cloth-tools/: pyproject.toml  setup.py
cloth-tools/cloth_tools/: __init__.py  bounding_boxes.py  config.py  motion_blur_detector.py  multiprocess_viewer.py  trajectory_execution.py  wrench_smoother.py
cloth-tools/cloth_tools/annotation/: grasp_annotation.py
cloth-tools/cloth_tools/controllers/: basic_home_controller.py  controller.py  dry_run_grasp_controller.py  grasp_hanging_controller.py  grasp_highest_controller.py  grasp_lowest_controller.py  hang_controller.py  home_controller.py  stretch_controller.py
cloth-tools/cloth_tools/dataset/: bookkeeping.py  collection.py  download.py  format.py  upload.py
cloth-tools/cloth_tools/drake/: building.py  collisions.py  dual_ur5e.py  scenes.py  visualization.py
cloth-tools/cloth_tools/kinematics/: constants.py  inverse_kinematics.py
cloth-tools/cloth_tools/ompl/: dual_arm_planner.py  single_arm_planner.py  state_space.py
cloth-tools/cloth_tools/path/: execution.py
cloth-tools/cloth_tools/planning/: grasp_planning.py  interfaces.py
cloth-tools/cloth_tools/point_clouds/: camera.py  cloth_detection.py  operations.py
cloth-tools/cloth_tools/resources/: __init__.py  paths.py  table.urdf
cloth-tools/cloth_tools/stations/: competition_station.py  coordinate_frames.py  dual_arm_station.py  temp.py
cloth-tools/cloth_tools/urdf/: primitives.py  robotiq.py
cloth-tools/cloth_tools/visualization/: open3d.py  opencv.py  rerun.py
cloth-tools/test/: test_dummy.py
evaluation-service/: .gitignore  README.md  download_sam_weights.sh  readme.md
evaluation-service/backend/: compute_area.py  main.py  remove_results.py  requirements.txt  sam_worker.py  server.py
evaluation-service/frontend/: package.json  tailwind.config.js
notebooks/: 01_getting_started.ipynb  02_background_removal.ipynb  03_coco_dataset_creation.ipynb  04_server_communication.ipynb  05_grasp_planning.ipynb  06_load_references.ipynb  07_sam_segmentation.ipynb  08_paper_figures.ipynb  09_load_training.ipynb  10_pareto_and_table.ipynb  11_coverage_progression.ipynb  12_start_result.ipynb
notebooks/dev/: array_copy_performance.ipynb  check_for_grasp_files.ipynb  find_complete_samples.ipynb  find_latest_observation.ipynb  upload_grasp.ipynb  zed2i_performance.ipynb
notebooks/grasping/: 01_annotation.ipynb  02_cloth_collision.ipynb  03_world_frame.ipynb  04_intrinsics.ipynb
notebooks/motion_planning/: 01_dual_ur5e_drake_scene.ipynb  01_workspace_analysis.ipynb  02_drake_ompl.ipynb  02_motion_planning.ipynb  03_planning_to_real.ipynb  04_single_arm_planning.ipynb  05_dual_arm_planning.ipynb  06_ompl_benchmark.ipynb  07_dual_arm_scenes.ipynb  08_inverse_kinematics.ipynb  09_sinlge_arm_ik.ipynb  10_sinlge_arm_plan_to_tcp_pose.ipynb  11_dual_arm_plan_to_tcp_pose.ipynb  cube_and_cylinder.urdf  table.urdf
scripts/data_collection/: 01_collect_samples_without_moving.py  01_collect_samples_without_robots.py  02_check_cloth_bboxes.py  02_cloth_localization.py  03_check_world_frame.py  04_grasp_highest_loop.py  05_grasp_highest_lowest_loop.py  06_stretch_loop.py  07_station_video_recording_test.py  07_video_recording_test.py  08_station_video_recording_test.py  09_data_collection_loop.py  10_motion_blur.py  11_log_wrench.py  12_stretch_with_force.py  13_fix_tcp_pose_frame_in_dataset.py  14_collection_reference_observations.py  15_remote_dry_run.py  16_save_observation.py
(+8 files in other folders)
