[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloth-tools"
version = "0.0.2"
authors = [
  { name="Victor-Louis De Gusseme", email="victorlouisdg@gmail.com" },
]
description = "Official package for the ICRA 2024 Cloth Competition"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "click",
    "rerun-sdk",
    "pydrake",
    "airo-typing @ git+https://github.com/airo-ugent/airo-mono@pointclouds#subdirectory=airo-typing",
    "airo-spatial-algebra @ git+https://github.com/airo-ugent/airo-mono@pointclouds#subdirectory=airo-spatial-algebra",
    "airo-robots @ git+https://github.com/airo-ugent/airo-mono@pointclouds#subdirectory=airo-robots",
    "airo-camera-toolkit @ git+https://github.com/airo-ugent/airo-mono@pointclouds#subdirectory=airo-camera-toolkit",
    "airo-dataset-tools @ git+https://github.com/airo-ugent/airo-mono@pointclouds#subdirectory=airo-dataset-tools",
    "linen @ git+https://github.com/Victorlouisdg/linen@main#subdirectory=linen",
]

[project.urls]
Homepage = "https://github.com/Victorlouisdg/cloth-competition"
Issues = "https://github.com/Victorlouisdg/cloth-competition/issues"