[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloth-tools"
version = "0.1.1"
authors = [
  { name = "Victor-Louis De Gusseme", email = "victorlouisdg@gmail.com" },
]
description = "Official package for the ICRA 2024 Cloth Competition"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "click",
  "rerun-sdk",
  "pydrake",
  "airo-models >= 0.0.7",
  "ur-analytic-ik == 0.0.3",
  "ffmpegcv",
]

[project.urls]
Homepage = "https://github.com/Victorlouisdg/cloth-competition"
Issues = "https://github.com/Victorlouisdg/cloth-competition/issues"
